--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dotenv": "^16.4.5",
